--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plugin-template",
+  "name": "@ubiquibot/base-rate-watcher",
   "version": "1.0.0",
   "description": "Ubiquibot plugin template repository with TypeScript support.",
   "author": "Ubiquity DAO",
@@ -32,7 +32,6 @@
     "@octokit/rest": "20.1.1",
     "@octokit/webhooks": "13.2.7",
     "@sinclair/typebox": "0.32.33",
-    "@supabase/supabase-js": "2.43.5",
     "dotenv": "16.4.5",
     "typebox-validators": "0.3.5"
   },
@@ -78,5 +77,6 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
