--- a/.github/workflows/jest-testing.yml
+++ b/.github/workflows/jest-testing.yml
@@ -2,7 +2,7 @@ name: Run Jest testing suite
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Build"]
+    workflows: ["Knip"]
     types:
       - completed
 
