--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@octokit/rest": "20.1.1",
     "@octokit/webhooks": "13.2.7",
     "@sinclair/typebox": "0.32.33",
+    "dotenv": "^16.4.5",
     "typebox-validators": "0.3.5"
   },
   "devDependencies": {
