--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@actions/core": "1.10.1",
     "@actions/github": "6.0.0",
     "@octokit/rest": "20.1.1",
+    "@octokit/types": "^13.5.0",
     "@octokit/webhooks": "13.2.7",
     "@sinclair/typebox": "0.32.33",
     "dotenv": "^16.4.5",
