chore: update from plugin-template

--- a/.github/workflows/compute.yml
+++ b/.github/workflows/compute.yml
@@ -33,6 +33,6 @@ jobs:
       - name: install dependencies
         run: yarn
 
-      - name: execute directive
+      - name: run plugin
         run: npx tsx ./src/main.ts
         id: base-rate-watcher
