--- a/jest.config.json
+++ b/jest.config.json
@@ -5,6 +5,6 @@
   "coveragePathIgnorePatterns": ["node_modules", "mocks"],
   "collectCoverage": true,
   "coverageReporters": ["json", "lcov", "text", "clover", "json-summary"],
-  "reporters": ["default", "jest-junit"],
+  "reporters": ["default", "jest-junit", "jest-md-dashboard"],
   "coverageDirectory": "coverage"
 }
