--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "node": ">=20.10.0"
   },
   "scripts": {
-    "format": "run-p format:*",
+    "format": "run-p format:lint format:prettier format:cspell",
     "format:lint": "eslint --fix .",
     "format:prettier": "prettier --write .",
-    "format:cspell": "cspell **/*",
+    "format:cspell": "npx tsx .github/cspell.ts",
     "knip": "knip --config .github/knip.ts",
     "knip-ci": "knip --no-exit-code --reporter json --config .github/knip.ts",
     "prepare": "husky install",
@@ -55,6 +55,7 @@
     "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
+    "jest-md-dashboard": "0.8.0",
     "knip": "5.21.2",
     "lint-staged": "15.2.7",
     "npm-run-all": "4.1.5",
@@ -79,5 +80,5 @@
       "@commitlint/config-conventional"
     ]
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@4.2.2"
 }
