--- a/.github/workflows/cspell.yml
+++ b/.github/workflows/cspell.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.10.0"
+          
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Install cspell
         run: yarn add cspell
