--- a/.github/workflows/knip.yml
+++ b/.github/workflows/knip.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           node-version: 20.10.0
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: Install toolchain
         run: yarn install
 
